--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -16,29 +16,36 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
+                <h2 class="page-title">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 {% if bag_items %}
+                    <p class="text-white">{{ bag_items }}</p>
+                    <br>
+                    <br>
+                    {{ request.session.bag }}
                     <div class="table-responsive rounded">
                         <table class="table table-sm table-borderless">
                             {% for item in bag_items %}
                                 <tr>
-                                    <div class="image-container w-25">
+
+                                    <td class="image w-25 mr-5 mt-3">
                                         <img class="img-fluid rounded" src="{{ item.product.image.url }}">
-                                    <td class="py-3">
+                                    </td>
+                                    <td>
                                         <p class="bag-product-name">{{ item.product.name }}
-                                            <hr class="page-breaker">
                                         <p class="bag-product-price">£ {{ item.product.price }}</p>
                                         <p class="bag-product-size">Size: {% if item.product_sizes %}{{ item.size|upper }}{% else %}{% endif %}</p>
                                         <p class="bag-product-code">Code: {{ item.product.sku|upper }}</p>
                                         <p class="bag-product-quantity">Qty: {{ item.quantity }}</p>
+                                        
                                     </td>
                                 </tr>
                             {% endfor %}
+                            <hr class="page-breaker">
                             <tr>
                                 <td colspan="5" class="pt-5 text-right">
                                     <h6 class="bag-total">Bag Total: £{{ total|floatformat:2 }}</h6>
