--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -15,27 +15,23 @@
     <div class="container mb-2">
         <div class="row">
             <div class="col">
-                <hr>
-                <h2 class="page-title">Shopping Bag</h2>
+
+                <h2 class="page-title mt-5 text-center">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 {% if bag_items %}
-                    <p class="text-white">{{ bag_items }}</p>
-                    <br>
-                    <br>
                     {{ request.session.bag }}
                     <div class="table-responsive rounded">
-                        <table class="table table-sm table-borderless">
+                        <table class="data-table table table-sm table-borderless">
                             {% for item in bag_items %}
                                 <tr>
-
                                     <td class="image w-25 mr-5 mt-3">
                                         <img class="img-fluid rounded" src="{{ item.product.image.url }}">
                                     </td>
-                                    <td>
+                                    <td class="products-table-data">
                                         <p class="bag-product-name">{{ item.product.name }}
                                         <p class="bag-product-price">£ {{ item.product.price }}</p>
                                         <p class="bag-product-size">Size: {% if item.product_sizes %}{{ item.size|upper }}{% else %}{% endif %}</p>
@@ -45,7 +41,6 @@
                                     </td>
                                 </tr>
                             {% endfor %}
-                            <hr class="page-breaker">
                             <tr>
                                 <td colspan="5" class="pt-5 text-right">
                                     <h6 class="bag-total">Bag Total: £{{ total|floatformat:2 }}</h6>
