--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -34,16 +34,18 @@
                                     <td class="products-table-data">
                                         <p class="bag-product-name">{{ item.product.name }}
                                         <p class="bag-product-price">£ {{ item.product.price }}</p>
-                                        <p class="bag-product-size">Size: {% if item.product_sizes %}{{ item.size|upper }}{% else %}{% endif %}</p>
+                                        {% if item.product.product_sizes %}
+                                            <p class="bag-product-size">Size: {% if item.product.product_sizes %}{{ item.size|lower }}{% endif %}</p>
+                                        {% endif %}
                                         <p class="bag-product-code">Code: {{ item.product.sku|upper }}</p>
-                                        <p class="bag-product-quantity">Qty: {{ item.quantity }}</p>
+                                        <p class="bag-product-quantity">Qty: {{ item.item_quantity }}</p>
                                         
                                     </td>
                                 </tr>
                             {% endfor %}
                             <tr>
                                 <td colspan="5" class="pt-5 text-right">
-                                    <h6 class="bag-total">Bag Total: £{{ total|floatformat:2 }}</h6>
+                                    <h6 class="bag-total">Bag Total: £{{ bag_total|floatformat:2 }}</h6>
                                     <h6 class="bag-delivery">Delivery: £{{ delivery|floatformat:2 }}</h6>
                                     <h4 class="bag-total mt-4">Grand Total: £{{ grand_total|floatformat:2 }}</h4>
                                     {% if free_delivery_delta > 0 %}
@@ -56,7 +58,7 @@
                             <tr>
                                 <td colspan="5" class="text-right">
                                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                        <span class="text-uppercase">Continue Shopping</span>
+                                        <span class="shopping-bag text-uppercase mt-5">Continue Shopping</span>
                                     </a>
                                     <a href="" class="btn btn-black rounded-0 btn-lg">
                                         <span class="text-uppercase">Checkout</span>
