Enabling inputs: Declared a variable to target the quantity input form control to allow user to use the inputs

--- a/products/templates/products/includes/product_quantity_js.html
+++ b/products/templates/products/includes/product_quantity_js.html
@@ -10,9 +10,9 @@
     }
 
     // Enabling inputs on page
-    var allQtyInputs = $('.qty_input');
-    for(var i = 0; i < allQtyInputs.length; i++){
-        var productId = $(allQtyInputs[i]).data('item_id');
+    var productQuantityInputs = $('.qty_input');
+    for(var i = 0; i < productQuantityInputs.length; i++){
+        var productId = $(productQuantityInputs[i]).data('item_id');
         handleEnableDisable(productId);
     }
 
