--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -38,8 +38,32 @@
                                             <p class="bag-product-size">Size: {% if item.product.product_sizes %}{{ item.size|lower }}{% endif %}</p>
                                         {% endif %}
                                         <p class="bag-product-code">Code: {{ item.product.sku|upper }}</p>
-                                        <p class="bag-product-quantity">Qty: {{ item.item_quantity }}</p>
-                                        
+                                        <form class="form update-quantity-form" method="POST" action="" >
+                                            {% csrf_token %}
+                                            <div class="form-group quantity-box">
+                                                <div class="input-group quantity">
+                                                    <div class="input-group-prepend">
+                                                        <button class="decrement-qty btn btn-black rounded-0" 
+                                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                            <span class="icon">
+                                                                <i class="fas fa-chevron-down text-white"></i>
+                                                            </span>
+                                                        </button>
+                                                    </div>
+                                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="9" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                                    <div class="input-group-append">
+                                                        <button class="increment-qty btn btn-black rounded-0"
+                                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                            <span class="icon">
+                                                                <i class="fas fa-chevron-up text-white"></i>
+                                                            </span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <a class="update-button text-info float-right">Update Bag</a>
+                                        <a class="remove-button text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}">Remove Item</a>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -79,5 +103,18 @@
             </div>
         </div>
     </div>
-    </div>
+</div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {% include 'products/includes/product_quantity_js.html' %}
+
+    <script type="text/javascript">
+        // Update the product quantity on click
+        $('.update-button').click(function(e) {
+            var updateForm = $(this).prev('.update-quantity-form');
+            updateForm.submit();
+        });
+    </script>
 {% endblock %}
