--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -55,7 +55,7 @@
                                                         </button>
                                                     </div>
                                                     <!------------------ Product quantity input ------------------>
-                                                    <input class="form-control form-control-sm qty_input text-white" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="9" data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                                                    <input class="form-control form-control-sm qty_input text-white" type="number" name="quantity" value="{{ item.item_quantity }}" min="1" max="9" data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
                                                     <div class="input-group-append">
                                                         <button class="increment-qty btn btn-sm btn-black rounded-0"
                                                             data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
@@ -74,7 +74,7 @@
                                         </form>
                                         <!------------------ Update bag and delete products ------------------>
                                         <a class="update-button text-info float-right">Update Bag</a>
-                                        <a class="remove-button text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}">Remove Item</a>
+                                        <a class="remove-button text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}">Remove Item</a>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -134,9 +134,9 @@
         $('.remove-button').click(function(e) {
             var getCsrfToken = "{{ csrf_token }}";
             var getItemId = $(this).attr('id').split('remove_')[1];
-            var getItemSize = $(this).data('size');
-            var url = `/shopping_bag/remove/${itemId}`;
-            var sendData = {'csrfmiddlewaretoken': getCsrfToken, 'size': getItemSize};
+            var getItemSize = $(this).data('product_size');
+            var url = `/shopping_bag/remove/${itemId}/`;
+            var sendData = {'csrfmiddlewaretoken': getCsrfToken, 'product_size': getItemSize};
 
             $.post(url, sendData)
             .done(function() {
