--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load bag_tools %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -36,6 +36,9 @@
                                     <td class="products-table-data">
                                         <p class="bag-product-name">{{ item.product.name }}
                                         <p class="bag-product-price">£ {{ item.product.price }}</p>
+                                        <!------------------ Subtotal calculations ------------------>
+                                        <p class="product-subtotal">Subtotal: £{{ item.product.price | calc_subtotal:item.item_quantity }}</p>
+                                        <!------------------ Only show if product has a size ------------------>
                                         {% if item.product.product_sizes %}
                                             <p class="bag-product-size">Size: {% if item.product.product_sizes %}{{ item.size|lower }}{% endif %}</p>
                                         {% endif %}
@@ -55,7 +58,7 @@
                                                         </button>
                                                     </div>
                                                     <!------------------ Product quantity input ------------------>
-                                                    <input class="form-control form-control-sm qty_input text-white" type="number" name="quantity" value="{{ item.item_quantity }}" min="1" max="9" data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                                                    <input class="form-control form-control-sm qty_input text-white float-right" type="number" name="quantity" value="{{ item.item_quantity }}" min="1" max="9" data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
                                                     <div class="input-group-append">
                                                         <button class="increment-qty btn btn-sm btn-black rounded-0"
                                                             data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
@@ -65,10 +68,6 @@
                                                             </span>
                                                         </button>
                                                     </div>
-                                                    <!------------------ Only show size drop down if products have a size ------------------>
-                                                    {% if item.product.product_sizes %}
-                                                        <input type="hidden" name="product_size" value="{{ item.size }}">
-                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </form>
