Added a toast messages section with comment

--- a/templates/base.html
+++ b/templates/base.html
@@ -120,13 +120,19 @@
                 </div>
             </div>
         </header>
-        <!-- Toast Messages -->
+        <!------------------ Toast messages ------------------>
         {% if messages %}
         <div class="site-message-container">
             {% for message in messages %}
                 {% with message.level as level %}
                     {% if level == 40 %}
                         {% include 'includes/toast_notifications/toast_error.html' %}
+                    {% elif level == 30 %}
+                        {% include 'includes/toast_notifications/toast_warning.html' %}
+                    {% elif level == 25 %}
+                        {% include 'includes/toast_notifications/toast_success.html' %}
+                    {% else %}
+                        {% include 'includes/toast_notifications/toast_info.html' %}
                     {% endif %}
                 {% endwith %}
             {% endfor %}
