--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
 
         {% block content %}
         {% endblock %}
-
+        <!------------------ Toast message JS ------------------>
         {% block postloadjs %}
             <script type="text/javascript">
                 $('.toast').toast('show');
