--- a/templates/includes/toast_notifications/toast_success.html
+++ b/templates/includes/toast_notifications/toast_success.html
@@ -1,13 +1,54 @@
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
-    <div class="arrow-up arrow-danger"></div>
+    <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper success"></div>
     <div class="toast-header">
-        <strong class="mr-auto">We have lift off!</strong>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span class="exit button" aria-hidden="true">&times;</span>
+        <strong class="mr-auto">Success!</strong>
+        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="toast-body">
-        <strong>{{ message }}</strong>
+        <div class="row">
+            <div class="col">
+                {{ message }}
+                <hr class="mt-1 mb-3">
+            </div>
+        </div>
+        {% if grand_total %}
+            <p class="logo-font bg-white text-black py-1">Your Shopping Bag ({{ product_count }})</p>
+            <div class="bag-notification-wrapper">
+                {% for item in bag_items %}
+                    <div class="row">
+                        <div class="col-3 my-1">
+                            <img class="w-100" src="{{ item.product.image.url }}">
+                        </div>
+                        <div class="col-9">
+                            <p class="pop-up-fields my-0">{{ item.product.name }}</p>
+                            <p class="pop-up-fields my-0">Size: {% if item.product.product_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
+                            <p class="pop-up-fields my-0 ">Qty: {{ item.item_quantity }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="row">
+                <div class="col">
+                    <strong><p class="mt-3 mb-1 text-white">
+                        Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
+                        <span class="bag-total float-right">£{{ bag_total|floatformat:2 }}</span>
+                    </p></strong>
+                    {% if free_delivery_delta > 0 %}
+                        <p class="mb-0 p-2 text-center">
+                            Spend <strong>£{{ free_delivery_delta }}</strong> more to get free next day delivery!
+                        </p>
+                    {% endif %}
+                    <a href="{% url 'bag' %}" class="btn btn-black btn-block rounded-0">
+                        <span class=" bag-pop-checkout text-uppercase">Go To Secure Checkout</span>
+                        <span class="icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </a>
+                </div>
+            </div>
+        {% endif %}
     </div>
 </div>
